fix (consonant-blocks): fix letter spacing for h6 in cards block

--- a/templates/consonant/blocks/cards/cards.css
+++ b/templates/consonant/blocks/cards/cards.css
@@ -64,6 +64,7 @@ main .cards .card-text h6 {
     color: #505050;
     font-weight: 400;
     padding: 0;
+    letter-spacing: 0;
 }
 
 main .cards .card-text > :first-child {
